# llm_semantic_book_recommender

./: .dockerignore  .env.example  .gitignore  DOCKER_GUIDE.md  Dockerfile  README.md  USER_GUIDE.md  docker-compose.yml  gradio_dashboard.py  pyproject.toml
notebooks/: data_exploration.ipynb  sentiment_analysis.ipynb  text_classification.ipynb  vector_search.ipynb
scripts/: check_vector_store.py  setup_db.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  exceptions.py
src/models/: __init__.py  database.py
src/services/: __init__.py  cache.py  embeddings.py  recommendations.py  user_data.py
src/ui/: __init__.py  app.py
tests/: __init__.py  test_embeddings.py
vector_store/1f6158b7-8ada-4e06-b24a-9edb30d4b458/: index_metadata.pickle
